Closed Bug 1676242 Opened 5 years ago Closed 5 years ago

ext-texture-compression-rgtc.html failures: level is 0, height is not a multiple of 4

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file)

FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, height is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
PASS getError was expected value: NO_ERROR : is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, height is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
PASS getError was expected value: NO_ERROR : is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, height is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
PASS getError was expected value: NO_ERROR : is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, height is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : level is 0, width is not a multiple of 4
PASS getError was expected value: NO_ERROR : is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid
PASS getError was expected value: NO_ERROR : level > 0, is valid

Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/363f6cc664b7 Enforce BPTC/RGTC level 0 => w/h multiple of 4. r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: