Bug 1676242 - Enforce BPTC/RGTC level 0 => w/h multiple of 4. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D96457